tests/algorithms/transpiler/CPP/divide_and_conquer/heaps_algorithm.error
compile: exit status 1
/workspace/mochi/tests/algorithms/transpiler/CPP/divide_and_conquer/heaps_algorithm.cpp:80:215: warning: multi-character character constant [-Wmultichar]
   80 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/divide_and_conquer/heaps_algorithm.cpp:80:251: warning: multi-character character constant [-Wmultichar]
   80 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                                                           ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/divide_and_conquer/heaps_algorithm.cpp: In function ‘int main()’:
/workspace/mochi/tests/algorithms/transpiler/CPP/divide_and_conquer/heaps_algorithm.cpp:159:62: error: cannot bind non-const lvalue reference of type ‘std::vector<long int>&’ to an rvalue of type ‘std::vector<long int>’
  159 |         std::vector<std::vector<int64_t>> perms = heaps(std::vector<int64_t>{int64_t(1), int64_t(2), int64_t(3)});
      |                                                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/divide_and_conquer/heaps_algorithm.cpp:138:63: note:   initializing argument 1 of ‘std::vector<std::vector<long int> > heaps(std::vector<long int>&)’
  138 | std::vector<std::vector<int64_t>> heaps(std::vector<int64_t>& arr) {
      |                                         ~~~~~~~~~~~~~~~~~~~~~~^~~
